tests/invalid/Final_Invalid_11.whiley
function f(int x) -> (int r):
    //
    final int y
    //
    y = x
    //    
    while x < 10:
        y = y + 1
    //
    return y